# Household-account-management

./: .env.sample  .gitignore  README.md  pyproject.toml
app/: main.py
app/data/: output_txt.py
app/dataaccess/: google_spreadsheets.py
app/service/: gs_command.py  input.py
app/utils/: settings.py
