[tool.poetry]
name = "household-account-management"
version = "0.1.0"
description = ""
authors = ["niihara megumu <nhrmgm1223@gmail.com@>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
