[tool.poetry]
name = "household-account-management"
version = "0.1.0"
description = ""
authors = ["niihara megumu <nhrmgm1223@gmail.com@>"]

[tool.poetry.dependencies]
python = "^3.7"
gspread = "^3.3.0"
oauth2client = "^4.1.3"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]

yapf = "^0.29.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
